--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "ejs": "*",
-    "busboy": "~0.2.6",
-    "node-uuid": "~1.4.1",
-    "nedb": "~0.10.5",
-    "timeago-words": "0.0.2"
+    "express": "4.8.5",
+    "ejs": "1.0.0",
+    "serve-favicon": "2.0.1",
+    "body-parser": "1.6.5",
+    "method-override": "2.1.3",
+    "morgan": "1.2.3",
+    "errorhandler": "1.1.1",
+    "busboy": "0.2.8",
+    "node-uuid": "1.4.1",
+    "nedb": "0.11.0",
+    "timeago-words": "0.0.3"
   }
 }
